Gtk+-3.20 BlueMenta: fix jumping 'treeview header' (column-header) button

--- a/desktop-themes/BlueMenta/gtk-3.0/gtk-widgets-backgrounds.css
+++ b/desktop-themes/BlueMenta/gtk-3.0/gtk-widgets-backgrounds.css
@@ -231,7 +231,7 @@ GtkStack column-header .button {
                                       shade(@theme_bg_color, 1.1));
 }
 
-treeview header button,
+treeview header button:hover,
 column-header.button:hover,
 column-header .button:hover {
 	background-image: linear-gradient(to bottom,
